cmake_minimum_required (VERSION 3.8)

project (packageLossUtils CXX)

# Find includes in corresponding build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)
# Instruct CMake to run moc automatically when needed.
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake/")
SET(PACKAGELOSSUTILS_CMAKE_SEARCH_PATH "C:/Qt/5.15.2/msvc2019_64" CACHE PATH "Additional Qt5 search path" )

# SpdLog base path, included via GIT Submodule
set(SPDLOG_MODULE_BASEPATH "${PROJECT_SOURCE_DIR}/3rdparty/spdlog")

SET(CMAKE_PREFIX_PATH "${PACKAGELOSSUTILS_CMAKE_SEARCH_PATH}/lib/cmake/")

# Find the Qt library
if (NOT APPLE)
	find_package(Qt5Core REQUIRED)
	find_package(Qt5Network REQUIRED)
else()
	find_package(Qt5Core REQUIRED HINTS /usr/local/Cellar/qt/*/lib/cmake ENV PATH)
	find_package(Qt5Network REQUIRED HINTS /usr/local/Cellar/qt/*/lib/cmake ENV PATH)
	find_package(Qt5MacExtras REQUIRED HINTS /usr/local/Cellar/qt/*/lib/cmake ENV PATH)
endif()

# Add SpgLog Includes
include_directories("${SPDLOG_MODULE_BASEPATH}/include")

if(CMAKE_COMPILER_IS_GNUCC)
	# Set standard flags for GCC
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -funroll-loops -O4 -fvisibility=hidden")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wextra -Wold-style-cast -pedantic")
	set(CMAKE_CXX_STANDARD 20)
	set(CMAKE_CXX_STANDARD_REQUIRED ON)
elseif(MSVC)
	set (CMAKE_CXX_STANDARD 20)
	set (CMAKE_CXX_STANDARD_REQUIRED ON)
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
	set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
	
	add_definitions(/D_CRT_SECURE_NO_WARNINGS)
	add_definitions(/DNOMINMAX)
	add_definitions(/DWIN32_LEAN_AND_MEAN)
else(CLANG)
	# As CLANG is not set as a variable, we need to set it in case we have not matched another compiler.
	set (CLANG ON)
	# Set standard flags for clang
	set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -funroll-loops -O3")
	if(UNIX AND NOT APPLE AND NOT USE_LIBCXX)
		set(CLANG_STDLIB libstdc++)
	else()
		set(CLANG_STDLIB libc++)
		# Set up some Xcode specific settings
		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++20")
		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
	endif()
	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -stdlib=${CLANG_STDLIB} -Wall -pedantic -Wno-unused-variable -ftemplate-depth=1024")
	set (CMAKE_CXX_STANDARD 20)
	set (CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

#
# Make a version file containing the current version from git.
#

# First check if this is a Git checkout or if a custom version tag should be used.
if ((NOT "${PACKAGELOSSUTILS_CUSTOM_VERSION_STRING}" STREQUAL "") AND (NOT "${PACKAGELOSSUTILS_CUSTOM_VERSION_STRING}" MATCHES "^[0-9]+\\.[0-9]+\\.[0-9]+\\-[0-9]+\\-[a-z0-9]+(\\-.*)?$"))
	message(FATAL_ERROR "Builtin version information: A custom version string is set, but it is malformed. Should be: 0.1.2-34-567890ab, i.e. major.minor.patch-commitsSinceTag-shortHash")
endif()

set(PACKAGELOSSUTILS_GIT_VERSION_STRING "")
if (NOT "${PACKAGELOSSUTILS_CUSTOM_VERSION_STRING}" STREQUAL "")
	message(STATUS "Builtin version information: custom version string set, using ${PACKAGELOSSUTILS_CUSTOM_VERSION_STRING}")
	set(PACKAGELOSSUTILS_GIT_VERSION_STRING "${PACKAGELOSSUTILS_CUSTOM_VERSION_STRING}")
elseif (NOT EXISTS "${PROJECT_SOURCE_DIR}/.git")
	message(STATUS "Builtin version information: .git folder non-existant, falling back to 0.0.0-0-00000000")
	set(PACKAGELOSSUTILS_GIT_VERSION_STRING "0.0.0-0-00000000")
else()
	message(STATUS "Builtin version information: .git folder exists, using git_describe_checkout")
	include(GetGitRevisionDescription)
	git_describe_checkout(PACKAGELOSSUTILS_GIT_VERSION_STRING)
endif()

if ("${PACKAGELOSSUTILS_GIT_VERSION_STRING}" MATCHES "^[0-9]+\\.[0-9]+\\.[0-9]+\\-[0-9]+\\-[a-z0-9]+(\\-.*)?$")
	# Parse the git Tag into variables
	string(REGEX REPLACE "^([0-9]+)\\..*" "\\1" PACKAGELOSSUTILS_CPP_VERSION_MAJOR "${PACKAGELOSSUTILS_GIT_VERSION_STRING}")
	string(REGEX REPLACE "^[0-9]+\\.([0-9]+).*" "\\1" PACKAGELOSSUTILS_CPP_VERSION_MINOR "${PACKAGELOSSUTILS_GIT_VERSION_STRING}")
	string(REGEX REPLACE "^[0-9]+\\.[0-9]+\\.([0-9]+).*" "\\1" PACKAGELOSSUTILS_CPP_VERSION_PATCH "${PACKAGELOSSUTILS_GIT_VERSION_STRING}")
	string(REGEX REPLACE "^[0-9]+\\.[0-9]+\\.[0-9]+\\-([0-9]+)\\-.*" "\\1" PACKAGELOSSUTILS_CPP_VERSION_COMMITS_AHEAD "${PACKAGELOSSUTILS_GIT_VERSION_STRING}")
	string(REGEX REPLACE "^[0-9]+\\.[0-9]+\\.[0-9]+\\-[0-9]+\\-([a-z0-9]+).*" "\\1" PACKAGELOSSUTILS_CPP_VERSION_HASH "${PACKAGELOSSUTILS_GIT_VERSION_STRING}")
	string(REGEX REPLACE "^[0-9]+\\.[0-9]+\\.[0-9]+\\-[0-9]+\\-[a-z0-9]+\\-(.*)" "\\1" PACKAGELOSSUTILS_CPP_VERSION_APPENDIX "${PACKAGELOSSUTILS_GIT_VERSION_STRING}")
	if ("${PACKAGELOSSUTILS_CPP_VERSION_APPENDIX}" MATCHES "^.*dirty.*$")
		set(PACKAGELOSSUTILS_CPP_VERSION_DIRTY 1)
	else()
		set(PACKAGELOSSUTILS_CPP_VERSION_DIRTY 0)
	endif()
message(STATUS "PackageLossUtils - Version information: ${PACKAGELOSSUTILS_CPP_VERSION_MAJOR}.${PACKAGELOSSUTILS_CPP_VERSION_MINOR}.${PACKAGELOSSUTILS_CPP_VERSION_PATCH} (${PACKAGELOSSUTILS_CPP_VERSION_COMMITS_AHEAD} commits ahead of Tag) build from ${PACKAGELOSSUTILS_CPP_VERSION_HASH} (Dirty: ${PACKAGELOSSUTILS_CPP_VERSION_DIRTY})")
else()
	message(STATUS "No GIT support, no tags fetched or other problems. Defaulting to version 0.0.0-0-00000000 (result was ${PACKAGELOSSUTILS_GIT_VERSION_STRING})")
	set(PACKAGELOSSUTILS_CPP_VERSION_MAJOR 0)
	set(PACKAGELOSSUTILS_CPP_VERSION_MINOR 0)
	set(PACKAGELOSSUTILS_CPP_VERSION_PATCH 0)
	set(PACKAGELOSSUTILS_CPP_VERSION_COMMITS_AHEAD 0)
	set(PACKAGELOSSUTILS_CPP_VERSION_HASH "00000000")
	set(PACKAGELOSSUTILS_CPP_VERSION_DIRTY 0)
endif()

# Generate a version string
set(PACKAGELOSSUTILS_VERSION_NUM "${PACKAGELOSSUTILS_CPP_VERSION_MAJOR}.${PACKAGELOSSUTILS_CPP_VERSION_MINOR}.${PACKAGELOSSUTILS_CPP_VERSION_PATCH}")
set(PACKAGELOSSUTILS_VERSION "${PACKAGELOSSUTILS_CPP_VERSION_MAJOR}.${PACKAGELOSSUTILS_CPP_VERSION_MINOR}.${PACKAGELOSSUTILS_CPP_VERSION_PATCH}")
if (PACKAGELOSSUTILS_CPP_VERSION_COMMITS_AHEAD GREATER 0)
	set(PACKAGELOSSUTILS_VERSION "${PACKAGELOSSUTILS_VERSION}+${PACKAGELOSSUTILS_CPP_VERSION_COMMITS_AHEAD}")
endif()
set(PACKAGELOSSUTILS_VERSION "${PACKAGELOSSUTILS_VERSION}-${PACKAGELOSSUTILS_CPP_VERSION_HASH}")

# Check for %zu support
try_run(PACKAGELOSSUTILS_POINTER_SIZE_TEST_RUN_RESULT PACKAGELOSSUTILS_POINTER_SIZE_TEST_COMPILE_RESULT "${PROJECT_BINARY_DIR}/testPointerSize" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_ptr_size.cpp" COMPILE_OUTPUT_VARIABLE PACKAGELOSSUTILS_POINTER_SIZE_TEST_COMPILE_OUTPUT RUN_OUTPUT_VARIABLE PACKAGELOSSUTILS_POINTER_SIZE_TEST_RUN_OUTPUT)
if (NOT ${PACKAGELOSSUTILS_POINTER_SIZE_TEST_COMPILE_RESULT})
	message(FATAL_ERROR "Failed to compile pointer size testing program, please contact a developer! Extended Information: ${PACKAGELOSSUTILS_POINTER_SIZE_TEST_COMPILE_OUTPUT}") 
elseif(${PACKAGELOSSUTILS_POINTER_SIZE_TEST_RUN_RESULT} LESS 0 OR ${PACKAGELOSSUTILS_POINTER_SIZE_TEST_RUN_RESULT} GREATER 0)
	message(FATAL_ERROR "Failed to run pointer size testing program, please contact a developer! Extended Information: ${PACKAGELOSSUTILS_POINTER_SIZE_TEST_RUN_OUTPUT}") 
else()
	set(PACKAGELOSSUTILS_CPP_POINTER_SIZE "${PACKAGELOSSUTILS_POINTER_SIZE_TEST_RUN_OUTPUT}")
	message(STATUS "Collected pointer size information (pointer has ${PACKAGELOSSUTILS_POINTER_SIZE_TEST_RUN_OUTPUT} Bits)")
endif()

# Configure a file to pass the PackageLossUtils version to the source code
configure_file (
	"${PROJECT_SOURCE_DIR}/Version.cpp.in"
	"${PROJECT_BINARY_DIR}/include/Version.cpp"
)

# Add the binary dir include directory
include_directories("${PROJECT_BINARY_DIR}/include")

include_directories("${PROJECT_SOURCE_DIR}/src/")

file(GLOB PACKAGELOSSUTILS_HEADERS ${PROJECT_SOURCE_DIR}/src/*.h)
file(GLOB PACKAGELOSSUTILS_SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)

file(GLOB PACKAGELOSSUTILS_EXCEPTIONS_HEADERS ${PROJECT_SOURCE_DIR}/src/exceptions/*.h)
file(GLOB PACKAGELOSSUTILS_EXCEPTIONS_SOURCES ${PROJECT_SOURCE_DIR}/src/exceptions/*.cpp)

file(GLOB PACKAGELOSSUTILS_NETWORK_HEADERS ${PROJECT_SOURCE_DIR}/src/network/*.h)
file(GLOB PACKAGELOSSUTILS_NETWORK_SOURCES ${PROJECT_SOURCE_DIR}/src/network/*.cpp)

file(GLOB PACKAGELOSSUTILS_USERS_HEADERS ${PROJECT_SOURCE_DIR}/src/users/*.h)
file(GLOB PACKAGELOSSUTILS_USERS_SOURCES ${PROJECT_SOURCE_DIR}/src/users/*.cpp)

file(GLOB PACKAGELOSSUTILS_UTILITY_HEADERS ${PROJECT_SOURCE_DIR}/src/utility/*.h)
file(GLOB PACKAGELOSSUTILS_UTILITY_SOURCES ${PROJECT_SOURCE_DIR}/src/utility/*.cpp)

file(GLOB_RECURSE PACKAGELOSSUTILS_RESOURCES ${PROJECT_SOURCE_DIR}/resources/*.qrc)
QT5_ADD_RESOURCES(PACKAGELOSSUTILS_RESOURCESOURCES ${PACKAGELOSSUTILS_RESOURCES})

file(GLOB_RECURSE PACKAGELOSSUTILS_HEADERS_GENERATED ${PROJECT_BINARY_DIR}/include/*.h)
file(GLOB_RECURSE PACKAGELOSSUTILS_SOURCES_GENERATED ${PROJECT_BINARY_DIR}/include/*.cpp)

# Group sources in IDE
source_group("Headers" FILES ${PACKAGELOSSUTILS_HEADERS} ${PACKAGELOSSUTILS_HEADERS_GENERATED})
source_group("Sources" FILES ${PACKAGELOSSUTILS_SOURCES} ${PACKAGELOSSUTILS_SOURCES_GENERATED})
source_group("Exceptions" FILES ${PACKAGELOSSUTILS_EXCEPTIONS_HEADERS} ${PACKAGELOSSUTILS_EXCEPTIONS_SOURCES})
source_group("Network" FILES ${PACKAGELOSSUTILS_NETWORK_HEADERS} ${PACKAGELOSSUTILS_NETWORK_SOURCES})
source_group("Users" FILES ${PACKAGELOSSUTILS_USERS_HEADERS} ${PACKAGELOSSUTILS_USERS_SOURCES})
source_group("Utility" FILES ${PACKAGELOSSUTILS_UTILITY_HEADERS} ${PACKAGELOSSUTILS_UTILITY_SOURCES})

# Add source to this project's executable.
add_executable (packageLossUtils 
	${PACKAGELOSSUTILS_HEADERS_GENERATED} ${PACKAGELOSSUTILS_SOURCES_GENERATED}
	${PACKAGELOSSUTILS_HEADERS} ${PACKAGELOSSUTILS_SOURCES}
	${PACKAGELOSSUTILS_EXCEPTIONS_HEADERS} ${PACKAGELOSSUTILS_EXCEPTIONS_SOURCES}
	${PACKAGELOSSUTILS_NETWORK_HEADERS} ${PACKAGELOSSUTILS_NETWORK_SOURCES}
	${PACKAGELOSSUTILS_USERS_HEADERS} ${PACKAGELOSSUTILS_USERS_SOURCES}
	${PACKAGELOSSUTILS_UTILITY_HEADERS} ${PACKAGELOSSUTILS_UTILITY_SOURCES}
	${PACKAGELOSSUTILS_RESOURCESOURCES}
	${PROTO_SRCS} ${PROTO_HDRS}
)

target_link_libraries(packageLossUtils Qt5::Core Qt5::Network)

# TODO: Add tests and install targets if needed.
